--- a/views/homePages/homeMain.html
+++ b/views/homePages/homeMain.html
@@ -122,8 +122,12 @@
           </p>
 
           <div class="navigation-buttons">
-            <button class="prev-button"><i>←</i></button>
-            <button class="next-button"><i>→</i></button>
+            <button class="prev-button">
+              <i class="fas fa-arrow-left"></i>
+            </button>
+            <button class="next-button">
+              <i class="fas fa-arrow-right"></i>
+            </button>
           </div>
         </div>
       </div>
@@ -179,8 +183,12 @@
           </p>
 
           <div class="navigation-buttons">
-            <button class="prev-button"><i>←</i></button>
-            <button class="next-button"><i>→</i></button>
+            <button class="prev-button">
+              <i class="fas fa-arrow-left"></i>
+            </button>
+            <button class="next-button">
+              <i class="fas fa-arrow-right"></i>
+            </button>
           </div>
         </div>
       </div>
@@ -232,8 +240,12 @@
           </p>
 
           <div class="navigation-buttons">
-            <button class="prev-button"><i>←</i></button>
-            <button class="next-button"><i>→</i></button>
+            <button class="prev-button">
+              <i class="fas fa-arrow-left"></i>
+            </button>
+            <button class="next-button">
+              <i class="fas fa-arrow-right"></i>
+            </button>
           </div>
         </div>
       </div>
@@ -282,8 +294,12 @@
           </p>
 
           <div class="navigation-buttons">
-            <button class="prev-button"><i>←</i></button>
-            <button class="next-button"><i>→</i></button>
+            <button class="prev-button">
+              <i class="fas fa-arrow-left"></i>
+            </button>
+            <button class="next-button">
+              <i class="fas fa-arrow-right"></i>
+            </button>
           </div>
         </div>
       </div>
