standardize home main css

--- a/views/homePages/homeMain.html
+++ b/views/homePages/homeMain.html
@@ -23,11 +23,13 @@
     <!-- Header Component -->
     <div id="header"></div>
 
-    <!----- INTRO SECTION HTML ----->
+    <!-- HERO SECTION -->
     <div class="hero">
       <img src="https://i.imgur.com/NztmNm7.png" alt="Industrial Facility" />
     </div>
+    <!----- END OF HERO SECTION HTML ----->
 
+    <!----- INTRO SECTION HTML ----->
     <section class="intro-section">
       <div class="intro-header">
         <h1 class="page-intro">GIỚI THIỆU DOANH NGHIỆP KỲ LONG</h1>
@@ -52,7 +54,7 @@
             title="Đội ngũ kỹ sư chuyên nghiệp Kỳ Long"
           >
             <i class="fas fa-users"></i>
-            <span>Đội Ngũ Kỹ Sư</span>
+            <span>Đội ngũ kỹ sư</span>
           </button>
           <button
             class="tab-button"
