change the motto of about us tab of intro section of home main

--- a/views/homePages/homeMain.html
+++ b/views/homePages/homeMain.html
@@ -117,19 +117,19 @@
                   <div class="feature-icon">
                     <i class="fas fa-fire-alt"></i>
                   </div>
-                  <h3>Giải Pháp Khí Đốt Toàn Diện</h3>
+                  <h3>Thắp Sáng Tương Lai</h3>
                 </div>
                 <div class="feature-card">
                   <div class="feature-icon">
                     <i class="fas fa-cogs"></i>
                   </div>
-                  <h3>Phương Án Ưu Việt</h3>
+                  <h3>Vững Bền Thành Quả</h3>
                 </div>
                 <div class="feature-card">
                   <div class="feature-icon">
                     <i class="fas fa-leaf"></i>
                   </div>
-                  <h3>Ứng Dụng Công Nghệ Xanh</h3>
+                  <h3>Công Nghệ Xanh Sạch</h3>
                 </div>
                 <div class="feature-card">
                   <div class="feature-icon">
