--- a/views/homePages/homeMain.html
+++ b/views/homePages/homeMain.html
@@ -239,7 +239,7 @@
                   <div class="feature-icon">
                     <i class="fas fa-sync-alt"></i>
                   </div>
-                  <h3>Tối Ưu Hóa Quy Trình</h3>
+                  <h3>Quy Trình Tối Ưu</h3>
                 </div>
                 <div class="feature-card">
                   <div class="feature-icon">
