replace icon back to images in intro section of home main

--- a/views/homePages/homeMain.html
+++ b/views/homePages/homeMain.html
@@ -25,7 +25,7 @@
 
     <!-- HERO SECTION -->
     <div class="hero">
-      <img src="https://i.imgur.com/NztmNm7.png" alt="Industrial Facility" />
+      <img src="https://i.imgur.com/gOCWMVl.png" alt="Industrial Facility" />
     </div>
     <!----- END OF HERO SECTION HTML ----->
 
@@ -114,26 +114,38 @@
             <div class="visual-side">
               <div class="feature-cards">
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-fire-alt"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/mIyKxPx.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>Thắp Sáng Tương Lai</h3>
                 </div>
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-cogs"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/tBe1neS.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>Vững Bền Thành Quả</h3>
                 </div>
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-leaf"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/XKQ0o6Z.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>Công Nghệ Xanh Sạch</h3>
                 </div>
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-handshake"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/b0207s5.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>Cam Kết Mạnh Mẽ</h3>
                 </div>
@@ -173,26 +185,38 @@
             <div class="visual-side">
               <div class="feature-cards">
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-hard-hat"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/RYpowKh.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>Vận Hành Chuyên Nghiệp</h3>
                 </div>
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-drafting-compass"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/7o2jku4.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>Thiết Kế Chuẩn Mực</h3>
                 </div>
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-clipboard-check"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/ZlTCNLE.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>Kiểm Tra Kỹ Lưỡng</h3>
                 </div>
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-project-diagram"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/HI9ajrU.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>Quản Lý Chặt Chẽ</h3>
                 </div>
@@ -230,26 +254,38 @@
             <div class="visual-side">
               <div class="feature-cards">
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-tint"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/l5nEFMZ.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>Hàng Đầu Về LNG</h3>
                 </div>
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-sync-alt"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/A7DavsY.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>Quy Trình Tối Ưu</h3>
                 </div>
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-wind"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/ejGod6Y.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>CNG Chất Lượng Cao</h3>
                 </div>
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-sliders-h"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/OZgoLVC.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>Thiết Bị Tiên Tiến</h3>
                 </div>
@@ -288,26 +324,38 @@
             <div class="visual-side">
               <div class="feature-cards">
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-building"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/jQMuEPE.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>Cơ Sở Hiện Đại</h3>
                 </div>
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-industry"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/gOCWMVl.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>Năng Suất Cao</h3>
                 </div>
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-toolbox"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/LNk6tW4.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>Điều Chỉnh Linh Hoạt</h3>
                 </div>
                 <div class="feature-card">
-                  <div class="feature-icon">
-                    <i class="fas fa-gas-pump"></i>
+                  <div class="feature-image">
+                    <img
+                      src="https://i.imgur.com/rPlGqeg.png"
+                      alt="Thắp Sáng Tương Lai"
+                    />
                   </div>
                   <h3>Phân Phối Hiệu Quả</h3>
                 </div>
