reorganize the tab of product pages into commerce and production, add png and lng commerce product pages

--- a/views/components/footer/footer.html
+++ b/views/components/footer/footer.html
@@ -41,10 +41,9 @@
           >
         </li>
         <li>
-          <a href="/productMain#wholesale" title="Bán buôn Kỳ Long">Bán buôn</a>
-        </li>
-        <li>
-          <a href="/productMain#retail" title="Bán lẻ Kỳ Long">Bán lẻ</a>
+          <a href="/productMain#commerce" title="Thương mại Kỳ Long"
+            >Thương mại</a
+          >
         </li>
       </ul>
     </div>
